--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
         <!-- Navegação -->
         <nav>
-            <a href="Index.html">Início</a>
+            <a href="index.html">Início</a>
             <a href="integrantes.html">Integrantes</a>
             <a href="tabela.html">Tabela</a>
             <a href="sobre.html">Sobre</a>
