--- a/sobre.html
+++ b/sobre.html
@@ -15,7 +15,7 @@
         <header>
         <nav>
            
-            <a href="Index.html">Inicio</a>
+            <a href="index.html">Inicio</a>
             <a href="integrantes.html">Integrantes</a>
             <a href="tabela.html">Tabela</a>
             <a href="sobre.html">Sobre</a>
